--- a/html/pedidos.html
+++ b/html/pedidos.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="../js/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPmQTdBkiSL8d7BSRywbZWwWCAZV6J7D8&libraries=places"></script>
 </head>
 
@@ -38,7 +38,7 @@
                 <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"> </span>
                 </button>
                 <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                     aria-labelledby="offcanvasDarkNavbarLabel">
@@ -89,9 +89,9 @@
                 </div>
 
                 <div class="m-5 d-none" id="address">
-                    <p id="titleAddress">Escribe tu dirección:</p>
+                    <p id="titleAddress">Escribe tu dirección completa:</p>
                     <input type="text" name="direccion" id="addressInput" class="form-control"
-                        placeholder="Calle, número y ciudad">
+                        placeholder="Calle, número, piso y ciudad">
                     <p class="d-none" id="locationResult"></p>
 
                     <!---- ENLACE A UBICACION --->
@@ -100,11 +100,15 @@
                 </div>
 
                 <!-- Pie del modal -->
-                <div class="modal-footer d-none" id="footerPedidos">
+                <div class="modal-footer d-none" id="footerOrders">
                     <button type="button" class="btn btn-primary" id="validateAddress">Validar dirección</button>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="d-flex justify-content-center bg-dark ">
+        <img src="../img/HuevoBurger.png" alt="Menu1" />
     </div>
 
     <footer>
@@ -120,6 +124,7 @@
                     alt="logoWhatsApp" /></a>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
