--- a/html/index.html
+++ b/html/index.html
@@ -1,171 +1,227 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="es">
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sophie's Burger</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="../js/main.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <a id="entry" href="index.html">
-                <img src="../img/logo_burger.png" alt="logo" />
-            </a>
-        </div>
-        <nav class="main-bar d-none d-md-block">
-            <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="carta.html">Carta</a></li>
-                <li class="nav-item"><a class="nav-link" href="menus.html">Menús</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Socios</a></li>
-                <li class="nav-item"><a class="nav-link" href="pedidos.html">Pedidos</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Reservas</a></li>
-            </ul>
-        </nav>
-        <nav class="alt-bar navbar navbar-expand-lg bg-dark d-md-none">
-            <div class="container-fluid">
-                <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                    aria-labelledby="offcanvasDarkNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h4 class="offcanvas-title text-danger" id="offcanvasDarkNavbarLabel">Sophie's Burger</h4>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="carta.html">Carta</a></li>
-                            <li class="nav-item"><a class="nav-link" href="menus.html">Menús</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Socios</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pedidos.html">Pedidos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Reservas</a></li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="logo">
+        <a id="entry" href="index.html">
+          <img src="../img/logo_burger.png" alt="logo" />
+        </a>
+      </div>
+      <nav class="main-bar d-none d-md-block">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="carta.html">Carta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="menus.html">Menús</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Socios</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="pedidos.html">Pedidos</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Reservas</a></li>
+        </ul>
+      </nav>
+      <nav class="alt-bar navbar navbar-expand-lg bg-dark d-md-none">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler bg-secondary"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasDarkNavbar"
+            aria-controls="offcanvasDarkNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="offcanvas offcanvas-end text-bg-dark"
+            tabindex="-1"
+            id="offcanvasDarkNavbar"
+            aria-labelledby="offcanvasDarkNavbarLabel"
+          >
+            <div class="offcanvas-header">
+              <h4
+                class="offcanvas-title text-danger"
+                id="offcanvasDarkNavbarLabel"
+              >
+                Sophie's Burger
+              </h4>
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
             </div>
-        </nav>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="carta.html">Carta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="menus.html">Menús</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Socios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pedidos.html">Pedidos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Reservas</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <section class="imgs-container">
-        <div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../img/3BurgersFire.png" class="w-100" alt="3BurgersFire">
-                </div>
-                <div class="carousel-item">
-                    <img src="../img/3BurgersLine.png" class="w-100" alt="3BurgersLine">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+      <div
+        id="carouselAutoplaying"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="../img/3BurgersFire.png"
+              class="w-100"
+              alt="3BurgersFire"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../img/3BurgersLine.png"
+              class="w-100"
+              alt="3BurgersLine"
+            />
+          </div>
         </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselAutoplaying"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselAutoplaying"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </section>
 
     <nav class="second-bar d-none d-md-block">
-        <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="#">Conócenos</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Únete a nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Solicitar factura</a></li>
-        </ul>
+      <ul class="nav justify-content-center">
+        <li class="nav-item"><a class="nav-link" href="#">Conócenos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Únete a nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Solicitar factura</a>
+        </li>
+      </ul>
     </nav>
     <select class="second-bar form-select d-block d-md-none">
-        <option selected>Conócenos</option>
-        <option value="1">Blog</option>
-        <option value="2">Contacto</option>
-        <option value="3">Únete a nosotros</option>
-        <option value="4">Solicitar factura</option>
+      <option selected>Conócenos</option>
+      <option value="1">Blog</option>
+      <option value="2">Contacto</option>
+      <option value="3">Únete a nosotros</option>
+      <option value="4">Solicitar factura</option>
     </select>
 
     <article class="text-article">
-        <p class="text lh-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum consequatur placeat
-            voluptas eius temporibus cum saepe nemo delectus fuga fugiat aspernatur exercitationem, vel magnam quasi eum
-            molestias! Quisquam, voluptas repellendus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Similique qui ad laborum neque alias voluptates architecto consequatur inventore dicta maiores! Blanditiis
-            delectus nisi ipsam quo. Est, officiis libero! Necessitatibus, labore?</p>
+      <p class="text lh-lg">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+        consequatur placeat voluptas eius temporibus cum saepe nemo delectus
+        fuga fugiat aspernatur exercitationem, vel magnam quasi eum molestias!
+        Quisquam, voluptas repellendus. Lorem ipsum dolor sit amet consectetur,
+        adipisicing elit. Similique qui ad laborum neque alias voluptates
+        architecto consequatur inventore dicta maiores! Blanditiis delectus nisi
+        ipsam quo. Est, officiis libero! Necessitatibus, labore?
+      </p>
     </article>
 
     <section class="discover-dishes">
-        <h3>DESCUBRE NUESTRA CARTA</h3>
-        <button type="button" id="btnToCarta" class="btn btn-outline-danger btn-md">Todos nuestros platos ></button>
+      <h3>DESCUBRE NUESTRA CARTA</h3>
+      <button
+        type="button"
+        id="btnToCarta"
+        class="btn btn-outline-danger btn-md"
+      >
+        Todos nuestros platos >
+      </button>
 
-        <div class="gallery">
-            <img src="../img/BaconBurger.png" alt="BaconBurger" />
-            <img src="../img/ChampisBurger.png" alt="MushroomsBurger" />
-            <img src="../img/CheeseBurger.png" alt="CheeseBurger" />
-            <img src="../img/HuevoBurger.png" alt="EggBurger" />
-        </div>
+      <div class="gallery">
+        <img src="../img/BaconBurger.png" alt="BaconBurger" />
+        <img src="../img/ChampisBurger.png" alt="MushroomsBurger" />
+        <img src="../img/CheeseBurger.png" alt="CheeseBurger" />
+        <img src="../img/HuevoBurger.png" alt="EggBurger" />
+      </div>
     </section>
 
     <section class="discover-menu">
-        <h3>NUESTROS MENÚS</h3>
-        <button type="button" id="btnToMenu" class="btn btn-outline-danger btn-md">VER MÁS > ></button>
+      <h3>NUESTROS MENÚS</h3>
+      <button
+        type="button"
+        id="btnToMenu"
+        class="btn btn-outline-danger btn-md"
+      >
+        VER MÁS > >
+      </button>
 
-        <div class="gallery">
-            <img src="../img/Menu1Burger.png" alt="Menu1" />
-            <img src="../img/Menu2Burger.png" alt="Menu2" />
-        </div>
+      <div class="gallery">
+        <img src="../img/Menu1Burger.png" alt="Menu1" />
+        <img src="../img/Menu2Burger.png" alt="Menu2" />
+      </div>
     </section>
 
-    <footer>
-        <ul class="lh-lg d-none d-md-block">
-            <li><a href="carta.html">Carta</a></li>
-            <li><a href="menus.html">Menús</a></li>
-            <li><a href="#">Socios</a></li>
-            <li><a href="pedidos.html">Pedidos</a></li>
-            <li><a href="#">Reservas</a></li>
-            <li><a href="#">Alérgenos</a></li>
-        </ul>
-        <ul class="lh-lg d-none d-md-block">
-            <li><a href="#">Conócenos</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Únete a nosotros</a></li>
-            <li><a href="#">Solicitar factura</a></li>
-            <li>Copyright ® 2023 Sophie's Burger </li>
-        </ul>
-        <div class="footer-logo">
-            <a href="index.html">
-                <img src="../img/logo_burger.png" alt="logo" />
-            </a>
-        </div>
-        <div class="rrss">
-            <a href="http://instagram.com" target="_blank"><img src="../img/logo-instagram.png"
-                    alt="logoInstagram" /></a>
-            <a href="http://facebook.com" target="_blank"><img src="../img/logo-facebook.png" alt="logoFacebook" /></a>
-            <a href="http://linkedin.com" target="_blank"><img src="../img/logo-linkedin.png" alt="logoLinkedin" /></a>
-            <a href="https://wa.me/34622161340" target="_blank"><img src="../img/logo-whatsapp.png"
-                    alt="logoWhatsApp" /></a>
-        </div>
+    <footer id="footer">
+      <script type="module">
+        import { createFooter } from "../js/footer.js";
+        const $footerElement = createFooter();
+        $("#footer").append($footerElement);
+      </script>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
 
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
