--- a/html/menus.html
+++ b/html/menus.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css" />
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 
 <body>
@@ -87,24 +89,14 @@
             recusandae accusantium, architecto dignissimos cumque.</p>
     </article>
 
-    <footer>
-        <ul class="lh-lg">
-            <li>Copyright ® 2023 Sophie's Burger </li>
-        </ul>
-        <div class="footer-logo">
-            <a href="index.html">
-                <img src="../img/logo_burger.png" alt="logo" />
-            </a>
-        </div>
-        <div class="rrss">
-            <a href="http://instagram.com" target="_blank"><img src="../img/logo-instagram.png"
-                    alt="logoInstagram" /></a>
-            <a href="http://facebook.com" target="_blank"><img src="../img/logo-facebook.png" alt="logoFacebook" /></a>
-            <a href="http://linkedin.com" target="_blank"><img src="../img/logo-linkedin.png" alt="logoLinkedin" /></a>
-            <a href="https://wa.me/34622161340" target="_blank"><img src="../img/logo-whatsapp.png"
-                    alt="logoWhatsApp" /></a>
-        </div>
+    <footer id="footer">
+        <script type="module">
+            import {createFooter} from '../js/footer.js';
+            const $footerElement= createFooter();
+            $('#footer').append($footerElement);
+        </script>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
