--- a/html/pedidos.html
+++ b/html/pedidos.html
@@ -9,13 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="../js/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPmQTdBkiSL8d7BSRywbZWwWCAZV6J7D8&libraries=places"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPmQTdBkiSL8d7BSRywbZWwWCAZV6J7D8&libraries=places"></script>
 </head>
 
 <body id="pedidos">
@@ -27,8 +28,12 @@
         </div>
         <nav class="main-bar d-none d-md-block">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="carta.html">Carta</a></li>
-                <li class="nav-item"><a class="nav-link" href="menus.html">Menús<s></s></a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="carta.html">Carta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="menus.html">Menús<s></s></a>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="#">Socios</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Reservas</a></li>
             </ul>
@@ -37,23 +42,31 @@
             <div class="container-fluid">
                 <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-
                     <span class="navbar-toggler-icon"> </span>
                 </button>
                 <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                     aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
-                        <h4 class="offcanvas-title text-danger" id="offcanvasDarkNavbarLabel">Sophie's Burger - Pedidos
+                        <h4 class="offcanvas-title text-danger" id="offcanvasDarkNavbarLabel">
+                            Sophie's Burger - Pedidos
                         </h4>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="carta.html">Carta</a></li>
-                            <li class="nav-item"><a class="nav-link" href="menus.html">Menús</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Socios</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Reservas</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="carta.html">Carta</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="menus.html">Menús</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Socios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Reservas</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -61,68 +74,78 @@
         </nav>
     </header>
 
-    <div class="modal fade" id="modalPedidos" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" id="modalOrders" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" role="dialog">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <!-- Cabecera del modal -->
                 <div class="modal-header bg-light">
-                    <h4 class="modal-title text-success">Tu pedido - Sophie's Burger</h4>
+                    <h4 class="modal-title text-success">
+                        Tu pedido - Sophie's Burger
+                    </h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
                 </div>
                 <!-- Cuerpo del modal -->
-                <br>
-                <p class="text-center fs-4 text-secondary">Escoge una opción:</p>
 
-                <div class="modal-body d-flex justify-content-center">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="orderOptions" id="inlineRadio1"
-                            value="option1">
-                        <label class="form-check-label" for="inlineRadio1">Recibirlo en casa</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="orderOptions" id="inlineRadio2"
-                            value="option2">
-                        <label class="form-check-label" for="inlineRadio2">Recoger en tienda</label>
+                <div id="modal-body" class="modal-body">
+                    <p class="text-center fs-4 text-secondary">Escoge una opción:</p>
+                    <div class="d-flex justify-content-center">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="orderOptions" id="inlineRadio1"
+                                value="option1" />
+                            <label class="form-check-label" for="inlineRadio1">Recibirlo en casa</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="orderOptions" id="inlineRadio2"
+                                value="option2" />
+                            <label class="form-check-label" for="inlineRadio2">Recoger en tienda</label>
+                        </div>
                     </div>
                 </div>
 
                 <div class="m-5 d-none" id="address">
                     <p id="titleAddress">Escribe tu dirección completa:</p>
                     <input type="text" name="direccion" id="addressInput" class="form-control"
-                        placeholder="Calle, número, piso y ciudad">
+                        placeholder="Calle, número, piso y ciudad" />
                     <p class="d-none" id="locationResult"></p>
 
                     <!---- ENLACE A UBICACION --->
-                    <br> <label for="getLocationCheckbox">Obtener Ubicación</label>
-                    <input type="checkbox" id="getLocationCheckbox"/>
+                    <br />
+                    <label for="getLocationCheckbox">Obtener Ubicación</label>
+                    <input type="checkbox" id="getLocationCheckbox" />
                 </div>
 
                 <!-- Pie del modal -->
                 <div class="modal-footer d-none" id="footerOrders">
-                    <button type="button" class="btn btn-primary" id="validateAddress">Validar dirección</button>
+                    <button type="button" class="btn btn-primary" id="validateAddress">
+                        Validar dirección
+                    </button>
+
+                    <button type="button" class="btn btn-primary d-none" id="okAddress">
+                        Aceptar
+                    </button>
+                    
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="d-flex justify-content-center bg-dark ">
-        <img src="../img/HuevoBurger.png" alt="Menu1" />
+    <div class="container-fluid text-center bg-dark">
+        <div class="position-relative">
+            <img src="../img/HuevoBurger.png" alt="Menu1" />
+            <button id="btnPlaceOrder"
+                class="btn btn-lg btn-danger position-absolute top-50 start-50 translate-middle p-4">
+                Haz tu pedido
+            </button>
+        </div>
     </div>
 
-    <footer>
-        <ul class="lh-lg">
-            <li>Copyright ® 2023 Sophie's Burger </li>
-        </ul>
-        <div class="rrss">
-            <a href="http://instagram.com" target="_blank"><img src="../img/logo-instagram.png"
-                    alt="logoInstagram" /></a>
-            <a href="http://facebook.com" target="_blank"><img src="../img/logo-facebook.png" alt="logoFacebook" /></a>
-            <a href="http://linkedin.com" target="_blank"><img src="../img/logo-linkedin.png" alt="logoLinkedin" /></a>
-            <a href="https://wa.me/34622161340" target="_blank"><img src="../img/logo-whatsapp.png"
-                    alt="logoWhatsApp" /></a>
-        </div>
+    <footer id="footer">
+        <script type="module">
+            import {createFooter} from '../js/footer.js';
+            const $footerElement= createFooter();
+            $('#footer').append($footerElement);
+        </script>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
